--- a/sequenceDiagram.ini
+++ b/sequenceDiagram.ini
@@ -98,16 +98,12 @@ sequenceDiagram
             B->>B: Устанавливает process.env.WEBSOCKET_SERVER_URL = ngrok_url
             Note right of B: Обновляет переменную окружения для использования в webhook
             
-            B->>N: Netlify API POST /sites создает сайт и связывает с GitHub
-            Note right of N: Создает Netlify сайт привязанный к приватному GitHub репо
-            Note over B,N: Netlify автоматически создает deploy key для доступа
-            N->>N: Автоматически настраивает build settings pnpm install && pnpm build
-            N->>GH: Добавляет deploy key в репозиторий для чтения кода
-            N->>WS: Настраивает webhook POST {ngrok_url}/webhooks/netlify для уведомлений
-            N-->>B: Возвращает netlify_site_id и deploy_key_id БЕЗ финального URL
+            B->>DB: Обновляет проект статус pending готов к разработке
+            Note right of DB: НЕ создается Netlify сайт - deploy_status pending
+            Note right of DB: Netlify сайт будет создан при первом Save All Changes
             
-            B->>DB: Обновляет проект статус building + Netlify ID
-            Note right of DB: deploy_status building + netlify_site_id (URL придет через webhook)
+            B->>DB: CommitHistoryQueries.createCommitHistory создает запись
+            Note right of DB: Сохраняет commit SHA количество файлов в commit_history
         end
         
         U->>B: Клик по ссылке скачивания проекта
@@ -132,11 +128,24 @@ sequenceDiagram
         U->>U: Запускает команду pnpm start для старта разработки
         Note right of U: Команда запускает одновременно pnpm dev и pnpm sync
         
-        Note right of U: Git уже настроен с remote origin но БЕЗ credentials
-        Note right of U: Пользователь НЕ может и НЕ должен пушить в GitHub напрямую
+        Note right of U: Git автоматически инициализируется при первом запуске sync
+        Note right of U: Remote origin настраивается на GitHub репозиторий проекта
         
         W->>W: Скрипт shipvibes-dev.js запускается командой pnpm sync
         Note right of W: Локальный агент начинает работу синхронизации с облаком
+        
+        W->>W: checkGitRepository проверяет наличие git репозитория
+        Note right of W: Если .git не найден инициализирует репозиторий автоматически
+        
+        alt Git репозиторий не найден
+            W->>W: initializeGitRepository автоматически настраивает git
+            Note right of W: git init + remote add origin к GitHub репозиторию проекта
+            W->>W: Создает initial commit с текущими файлами
+            Note right of W: git add . && git commit -m "Initial commit from template"
+        else Git уже настроен
+            W->>W: Проверяет remote origin
+            Note right of W: Выводит информацию о настроенном remote
+        end
         
         W->>WS: WebSocket подключение к ws://localhost:8080/
         Note right of W: Устанавливает постоянное соединение с облачным сервером
@@ -194,7 +203,7 @@ sequenceDiagram
             Note right of DB: UPSERT INTO pending_changes с полным content файла
             DB->>DB: Сохраняет project_id file_path content action modified timestamp
             
-            WS->>B: io.to projectId emit file_change_staged уведомляет браузер
+            WS->>B: io.to projectId emit file_change_staged уведомляет ВСЕ клиенты проекта
             Note right of B: Браузер получает уведомление об изменении в staging area
             
             B->>B: UI обновляет счетчик несохраненных изменений
@@ -229,8 +238,8 @@ sequenceDiagram
             W-->>WS: emit discard_completed подтверждение выполнения отката
             Note right of WS: Локальный агент подтверждает успешный откат файлов
             
-            WS->>B: io.to projectId emit discard_completed уведомляет браузер
-            Note right of B: Интерфейс обновляется показывая "No unsaved changes"
+            WS->>B: io.to projectId emit discard_success уведомляет ВСЕ клиенты проекта  
+            Note right of B: Браузер получает уведомление об очистке pending changes
             
             B->>B: UI скрывает кнопки Save All и Discard All
             Note right of B: Показывает что нет несохраненных изменений
@@ -259,6 +268,19 @@ sequenceDiagram
             WS->>DB: ProjectQueries.getProjectById получает данные GitHub репозитория
             Note right of DB: Возвращает github_repo_url owner repo_name для коммита
             DB-->>WS: Объект проекта с github_repo_url owner shipvibes repo_name
+            
+            alt Первый коммит пользователя (нет netlify_site_id)
+                WS->>N: Netlify API POST /sites создает сайт с GitHub интеграцией
+                Note right of N: Создает Netlify сайт привязанный к GitHub репозиторию
+                N->>N: Автоматически настраивает build settings и deploy key
+                N-->>WS: Возвращает netlify_site_id для сохранения в БД
+                
+                WS->>DB: ProjectQueries.updateProject сохраняет netlify_site_id
+                Note right of DB: Устанавливает netlify_site_id + deploy_status building
+                
+                WS->>N: setupWebhookForSite настраивает webhooks для уведомлений
+                Note right of N: Настраивает webhook для событий deploy_created deploy_building deploy_failed
+            end
             
             loop Для каждого измененного файла
                 WS->>GH: GitHub API PUT /repos/shipvibes/repo/contents/filePath
@@ -302,8 +324,8 @@ sequenceDiagram
                 W-->>WS: emit files_updated подтверждение обновления файлов
             end
             
-            WS->>B: io.to projectId emit commit_completed уведомляет о коммите
-            Note right of B: Браузер получает уведомление об успешном коммите
+            WS->>B: io.to projectId emit save_success уведомляет ВСЕ клиенты проекта о коммите
+            Note right of B: Браузер получает уведомление о сохранении и очистке pending changes
             
             B->>B: UI обновляет историю коммитов и очищает pending changes
             Note right of B: Показывает новый коммит в истории и убирает счетчик изменений
