--- a/sequenceDiagram.ini
+++ b/sequenceDiagram.ini
@@ -9,7 +9,7 @@ sequenceDiagram
     participant GH as 🐙 GitHub API организация shipvibes
     participant N as 🔥 Сервис деплоя Netlify
 
-    Note over U,N: 🚀 АРХИТЕКТУРА SHIPVIBES - GITHUB APP + DEPLOY KEYS + БЕЗ ЛОГИНА ПОЛЬЗОВАТЕЛЯ
+    Note over U,N: 🚀 АРХИТЕКТУРА SHIPVIBES - GITHUB APP + DEPLOY KEYS + БЕЗ ЛОГИНА + УМНЫЙ ОНБОРДИНГ
 
     %% === 0. ПРЕДВАРИТЕЛЬНАЯ НАСТРОЙКА ===
     rect rgb(230, 230, 250)
@@ -51,14 +51,14 @@ sequenceDiagram
         GH->>GH: Инициализация репозитория с initial commit и README в организации shipvibes
         GH-->>B: Возвращает github_repo_url clone_url и repo details
         
-        B->>DB: Обновляет проект с данными GitHub репозитория статус building
-        Note right of DB: Сохраняет github_repo_url github_repo_name owner + deploy_status building
+        B->>DB: Обновляет проект с данными GitHub репозитория статус pending
+        Note right of DB: Сохраняет github_repo_url github_repo_name owner + deploy_status pending
         
         B->>B: Запускает uploadTemplateFilesInBackground асинхронно
         Note right of B: Promise в фоне БЕЗ await не блокирует ответ API
         
-        B-->>U: Возвращает ответ мгновенно статус building downloadUrl
-        Note right of U: Получает проект со статусом building + ссылку скачивания
+        B-->>U: Возвращает ответ мгновенно статус pending downloadUrl
+        Note right of U: Получает проект со статусом pending + ссылку скачивания (заблокированную)
         
         par Фоновый процесс uploadTemplateFilesInBackground
             B->>B: generateTemplateFiles создает файлы шаблона проекта
@@ -98,19 +98,29 @@ sequenceDiagram
             B->>B: Устанавливает process.env.WEBSOCKET_SERVER_URL = ngrok_url
             Note right of B: Обновляет переменную окружения для использования в webhook
             
-            B->>DB: Обновляет проект статус pending готов к разработке
-            Note right of DB: НЕ создается Netlify сайт - deploy_status pending
+            B->>DB: Обновляет проект статус pending готов к скачиванию
+            Note right of DB: Статус меняется с pending на pending (проект готов)
             Note right of DB: Netlify сайт будет создан при первом Save All Changes
+            Note right of DB: 🔓 Теперь пользователь может скачивать проект
             
             B->>DB: CommitHistoryQueries.createCommitHistory создает запись
             Note right of DB: Сохраняет commit SHA количество файлов в commit_history
         end
         
-        U->>B: Клик по ссылке скачивания проекта
-        B->>B: GET /api/projects/projectId/download обрабатывает запрос
-        B->>GH: downloadProjectFromGitHub получает свежий ZIP из репозитория
-        GH-->>B: Отправляет содержимое main ветки как ZIP архив
-        B-->>U: Браузер скачивает project.zip на компьютер пользователя
+        alt Пользователь пытается скачать проект ДО завершения инициализации
+            U->>B: Клик по кнопке скачивания на онбординге (deploy_status = pending)
+            Note right of U: 🔒 Кнопка показывает "Initializing project..." и заблокирована
+            Note right of U: 🔄 Показывается спиннер и текст "Project is being initialized"
+            Note right of U: ⏰ UI автоматически проверяет статус каждые 2 секунды
+            Note right of U: ❌ Скачивание невозможно пока файлы шаблона загружаются в GitHub
+        else Пользователь скачивает проект ПОСЛЕ завершения инициализации
+            U->>B: Клик по ссылке скачивания проекта (deploy_status != pending)
+            B->>B: GET /api/projects/projectId/download обрабатывает запрос
+            B->>GH: downloadProjectFromGitHub получает свежий ZIP из репозитория
+            GH-->>B: Отправляет содержимое main ветки как ZIP архив
+            B-->>U: Браузер скачивает project.zip на компьютер пользователя
+            Note right of U: ✅ Проект содержит все файлы шаблона + shipvibes-dev.js с PROJECT_ID
+        end
     end
 
     %% === 2. ЛОКАЛЬНАЯ НАСТРОЙКА ===
@@ -374,27 +384,58 @@ sequenceDiagram
         end
     end
 
-    %% === 7. ДОПОЛНИТЕЛЬНЫЕ ВОЗМОЖНОСТИ ===
+    %% === 7. УНИФИЦИРОВАННЫЙ OVERVIEW И REAL-TIME ОБНОВЛЕНИЯ ===
     rect rgb(248, 248, 255)
-        Note over U,B: 7️⃣ ДОПОЛНИТЕЛЬНЫЕ ВОЗМОЖНОСТИ - просмотр истории и управление проектом
+        Note over U,B: 7️⃣ УНИФИЦИРОВАННЫЙ OVERVIEW - все функции на одной странице с WebSocket обновлениями
         
-        U->>B: Открывает страницу истории коммитов проекта
-        Note right of B: GET /project/projectId/file-history показывает все коммиты
+        U->>B: Открывает единую страницу Overview проекта
+        Note right of B: GET /project/projectId/overview - единственная страница с полной функциональностью
+        Note right of U: ❌ File History страница удалена - все показывается на Overview
         
-        B->>DB: CommitHistoryQueries.getProjectCommits получает историю
-        Note right of DB: SELECT * FROM commit_history WHERE project_id ORDER BY created_at
-        DB-->>B: Список всех коммитов с sha timestamp commit_message
+        B->>DB: Загружает начальные данные проекта истории и pending changes
+        Note right of DB: Начальная загрузка для инициализации WebSocket состояния
+        DB-->>B: История коммитов pending changes статусы проекта
         
-        B-->>U: Отображает timeline коммитов с возможностью просмотра diff
-        Note right of U: Может посмотреть что изменилось в каждом коммите
+        B-->>U: Отображает Overview с полной историей коммитов в real-time
+        Note right of U: ✨ ВСЕ коммиты показываются на Overview а не только последние 5
+        Note right of U: 🔄 История обновляется мгновенно через WebSocket при новых сохранениях
+        Note right of U: 📂 Интерактивное развертывание файлов в каждом коммите
+        Note right of U: 📊 Статистика проекта Agent Status Deploy Status Last Updated
+        Note right of U: 🔧 Sidebar для Save All и Discard All действий
         
-        U->>B: Клик по кнопке "Open Live Site" для просмотра деплоя
+        alt Пользователь редактирует файлы и сохраняет изменения
+            W->>WS: Отправляет file_change событие при редактировании
+            WS->>B: WebSocket событие file_change_staged обновляет Pending Changes
+            Note right of B: UI мгновенно показывает новые pending changes
+            
+            U->>B: Нажимает "Save All Changes" в Overview sidebar
+            WS->>GH: Создает GitHub коммит через save_all_changes
+            WS->>B: WebSocket событие commit_created с полными данными коммита
+            Note right of B: 📜 История коммитов на Overview обновляется мгновенно
+            Note right of B: ✨ Новый коммит появляется в списке БЕЗ перезагрузки страницы
+            
+            WS->>N: Netlify автоматически деплоит новый коммит
+            WS->>B: WebSocket событие deploy_status_update обновляет статус деплоя
+            Note right of B: 🚀 Deploy Status карточка обновляется в real-time
+        end
+        
+        U->>B: Клик по коммиту для просмотра файлов
+        Note right of B: Разворачивает файлы коммита с icons и размерами
+        
+        U->>B: Клик по кнопке "Open Live Site" 
         Note right of B: Открывает Netlify URL в новой вкладке браузера
         
-        U->>B: Клик по кнопке "View on GitHub" для просмотра репозитория
-        Note right of B: Открывает GitHub репозиторий shipvibes-app/shipvibes-project-{id}
+        U->>B: Клик по кнопке "View on GitHub"
+        Note right of B: Открывает GitHub репозиторий shipvibes-project-{id}
         B-->>U: Пользователь видит приватный репозиторий но НЕ может в него пушить
         Note right of U: Полная прозрачность изменений через GitHub интерфейс
+        
+        Note over U,B: 🏗️ АРХИТЕКТУРНЫЕ УЛУЧШЕНИЯ
+        Note right of U: 📱 Упрощенная навигация - только 3 вкладки Overview Onboarding Settings
+        Note right of U: ⚡ Real-time обновления всех компонентов через WebSocket
+        Note right of U: 🎯 Вся функциональность на одной странице Overview
+        Note right of U: 🔄 Нет HTTP polling - только WebSocket события
+        Note right of U: 📜 Полная история коммитов вместо ограничения в 5 записей
         
         Note over U,B: 💡 КЛЮЧЕВЫЕ ОСОБЕННОСТИ архитектуры
         Note right of U: Пользователь НИКОГДА не логинится в GitHub
@@ -404,6 +445,8 @@ sequenceDiagram
         Note right of U: Коммит в main = сохранение проекта + автодеплой
         Note right of U: Staging area позволяет накапливать изменения и откатывать их
         Note right of U: Локальный git reset работает БЕЗ авторизации для отката
+        Note right of U: 🔒 Умная блокировка скачивания до завершения инициализации проекта
+        Note right of U: 🔄 Real-time обновление UI при изменении статуса инициализации
     end
 
     %% === 8. УДАЛЕНИЕ ПРОЕКТА ===
@@ -474,4 +517,100 @@ sequenceDiagram
         end
         
 
+    end
+
+    %% === 9. ОБНОВЛЕННАЯ АРХИТЕКТУРА НАВИГАЦИИ ===
+    rect rgb(230, 255, 230)
+        Note over U,B: 9️⃣ ОБНОВЛЕНИЯ АРХИТЕКТУРЫ - умная навигация и унифицированный Overview
+        
+        Note over U,B: 📱 УМНАЯ НАВИГАЦИЯ И ОНБОРДИНГ
+        Note right of U: 🧠 Онбординг автоматически скрывается после первого деплоя
+        Note right of U: 🔑 Индикатор netlify_site_id определяет завершение онбординга
+        Note right of U: 📱 Динамически 2 или 3 вкладки - Overview Settings или Overview Onboarding Settings
+        Note right of U: ❌ File History страница удалена - функциональность перенесена в Overview
+        Note right of U: 🎯 Все важные функции теперь на главной странице Overview
+        
+        Note over U,B: ⚡ REAL-TIME ARCHITECTURE
+        Note right of B: WebSocket событие commit_created обновляет историю коммитов мгновенно
+        Note right of B: WebSocket событие file_change_staged обновляет pending changes
+        Note right of B: WebSocket событие deploy_status_update обновляет статус деплоя
+        Note right of B: ❌ HTTP polling полностью убран - только WebSocket события
+        
+        Note over U,B: 📜 ПОЛНАЯ ИСТОРИЯ КОММИТОВ
+        Note right of U: Overview показывает ВСЕ коммиты а не только последние 5
+        Note right of U: 📂 Интерактивное развертывание файлов в каждом коммите
+        Note right of U: 🔄 История обновляется в реальном времени при новых сохранениях
+        Note right of U: 🎨 Консистентный UI с остальными компонентами проекта
+        
+        Note over U,B: 🧠 УМНЫЙ ОНБОРДИНГ
+        Note right of U: Автоматическое скрытие вкладки Onboarding после netlify_site_id
+        Note right of U: Редирект на onboarding для новых проектов без деплоев
+        Note right of U: Редирект на overview для проектов с завершенным онбордингом
+        Note right of U: Масштабируемый индикатор основанный на реальном использовании проекта
+        
+        Note over U,B: 🏗️ АРХИТЕКТУРНЫЕ ПРЕИМУЩЕСТВА
+        Note right of B: Меньше HTTP запросов - экономия ресурсов сервера
+        Note right of B: Быстрее отклик UI - мгновенные обновления через WebSocket
+        Note right of B: Проще maintenance - меньше дублирующего кода
+        Note right of B: Лучше UX - вся информация в одном месте
+        Note right of B: Масштабируемость - единая WebSocket архитектура для всех компонентов
+    end
+
+    %% === 10. УМНАЯ ЛОГИКА ОНБОРДИНГА ===
+    rect rgb(240, 248, 255)
+        Note over U,B: 🔟 УМНАЯ ЛОГИКА ОНБОРДИНГА - автоматическое скрытие после завершения
+        
+        Note over U,B: 🔑 ИНДИКАТОР ЗАВЕРШЕНИЯ ОНБОРДИНГА
+        Note right of U: netlify_site_id = null → онбординг НЕ пройден показываем вкладку
+        Note right of U: netlify_site_id != null → онбординг пройден СКРЫВАЕМ вкладку  
+        Note right of U: 🎯 Надежный индикатор первый деплой = завершение онбординга
+        Note right of U: 📏 Масштабируемо не зависит от локальных агентов или сессий
+        
+        alt Пользователь заходит на /project/projectId (без пути)
+            U->>B: GET /project/projectId запрос к корню проекта
+            B->>DB: ProjectQueries.getProjectById проверяет netlify_site_id
+            
+            alt netlify_site_id отсутствует (проект новый)
+                DB-->>B: project.netlify_site_id = null
+                B-->>U: redirect(`/project/${id}/onboarding`) 
+                Note right of U: 🚀 Новые проекты автоматически на онбординг
+            else netlify_site_id присутствует (онбординг пройден)
+                DB-->>B: project.netlify_site_id = "site_12345"
+                B-->>U: redirect(`/project/${id}/overview`)
+                Note right of U: ✅ Завершенные проекты сразу на overview
+            end
+        end
+        
+        alt Пользователь пытается зайти на онбординг уже завершенного проекта
+            U->>B: GET /project/projectId/onboarding прямой переход
+            B->>B: Onboarding компонент проверяет project.netlify_site_id в useEffect
+            
+            alt netlify_site_id присутствует
+                B-->>U: router.push(`/project/${id}/overview`)
+                Note right of U: 🔄 Автоматический редирект с онбординга на overview
+            else netlify_site_id отсутствует  
+                B-->>U: Показывает онбординг как обычно
+                Note right of U: 📚 Онбординг отображается для новых проектов
+            end
+        end
+        
+        alt Динамическое отображение навигации
+            B->>B: ProjectNavigation компонент получает project данные
+            B->>B: const showOnboarding = !project?.netlify_site_id
+            
+            alt showOnboarding = true (новый проект)
+                B-->>U: Показывает 3 вкладки Overview Onboarding Settings
+                Note right of U: 📱 Полная навигация для новых проектов
+            else showOnboarding = false (завершенный проект)
+                B-->>U: Показывает 2 вкладки Overview Settings  
+                Note right of U: 🎯 Упрощенная навигация для активных проектов
+            end
+        end
+        
+        Note over U,B: 💡 ПРЕИМУЩЕСТВА УМНОГО ОНБОРДИНГА
+        Note right of U: 🎯 UX пользователи не видят ненужные вкладки после завершения
+        Note right of U: 🔑 Надежность основано на реальном состоянии проекта в БД
+        Note right of U: 📏 Масштабируемость работает для всех проектов автоматически
+        Note right of U: 🚀 Производительность меньше кликов и путаницы в навигации
+        Note right of U: 🔄 Автоматичность не требует ручных действий от пользователя
     end
