--- a/sequenceDiagram.ini
+++ b/sequenceDiagram.ini
@@ -2,21 +2,21 @@ sequenceDiagram
     participant U as 👤 Пользователь
     participant B as 🌐 Браузер Next.js порт 3004
     participant V as 💻 VSCode или Cursor редактор
-    participant W as 📡 shipvibes-dev.js агент слежения за файлами
+    participant W as 📡 vybcel агент слежения за файлами
     participant WS as 🔄 WebSocket сервер порт 8080
     participant DB as 🗃️ База данных Supabase PostgreSQL
-    participant APP as 🤖 Shipvibes Bot GitHub App ID 1390062
-    participant GH as 🐙 GitHub API организация shipvibes
+    participant APP as 🤖 Vybcel Bot GitHub App ID 1390062
+    participant GH as 🐙 GitHub API организация vybcel
     participant N as 🔥 Сервис деплоя Netlify
 
-    Note over U,N: 🚀 АРХИТЕКТУРА SHIPVIBES - GITHUB APP + DEPLOY KEYS + БЕЗ ЛОГИНА + УМНЫЙ ОНБОРДИНГ
+    Note over U,N: 🚀 АРХИТЕКТУРА VYBCEL - GITHUB APP + SERVERLESS-SAFE + БЕЗ ЛОГИНА + УМНЫЙ ОНБОРДИНГ
 
     %% === 0. ПРЕДВАРИТЕЛЬНАЯ НАСТРОЙКА ===
     rect rgb(230, 230, 250)
         Note over APP,GH: 0️⃣ ПРЕДВАРИТЕЛЬНАЯ НАСТРОЙКА - выполнено для платформы
         
-        Note over APP: GitHub App "Shipvibes Bot" ID 1390062 создан и настроен
-        APP->>GH: Установлен в организацию shipvibes с Installation ID 70719351
+        Note over APP: GitHub App "Vybcel Bot" ID 1390062 создан и настроен
+        APP->>GH: Установлен в организацию vybcel с Installation ID 70719351
         Note right of APP: User access not required - приложение работает автономно
         Note right of APP: Права repo contents metadata webhooks
         
@@ -29,7 +29,7 @@ sequenceDiagram
 
     %% === 1. СОЗДАНИЕ ПРОЕКТА ===
     rect rgb(240, 248, 255)
-        Note over U,N: 1️⃣ СОЗДАНИЕ ПРОЕКТА - автоматическое создание приватного GitHub репозитория
+        Note over U,N: 1️⃣ СОЗДАНИЕ ПРОЕКТА - WebSocket сервер выполняет все тяжелые операции
         U->>B: Заходит на страницу /dashboard в браузере
         Note right of U: Пользователь видит кнопку "Create New Project"
         
@@ -40,74 +40,89 @@ sequenceDiagram
         Note right of DB: INSERT INTO projects с user_id name template_type
         DB-->>B: Возвращает созданный объект проекта с уникальным ID
         
-        B->>APP: Запрашивает installation token для GitHub App ID 1390062
+        B->>WS: POST /api/projects/create-repository вызывает WebSocket сервер
+        Note right of B: Переносим создание GitHub репо в Railway (безопасно для serverless)
+        Note right of B: Vercel serverless функции не засыпают при HTTP запросах
+        
+        WS->>APP: Запрашивает installation token для GitHub App ID 1390062
         Note right of APP: Генерирует JWT с private key и получает installation token
         APP->>APP: POST /app/installations/70719351/access_tokens создает токен
-        APP-->>B: Возвращает installation_token действует 60 минут
+        APP-->>WS: Возвращает installation_token действует 60 минут
         
-        B->>GH: GitHub API POST /orgs/shipvibes/repos создает приватный репозиторий
-        Note right of GH: Создается приватный репозиторий shipvibes-project-{projectId}
+        WS->>GH: GitHub API POST /orgs/vybcel/repos создает приватный репозиторий
+        Note right of GH: Создается приватный репозиторий vybcel-project-{projectId}
         Note right of GH: Authorization Bearer {installation_token} + auto_init true
-        GH->>GH: Инициализация репозитория с initial commit и README в организации shipvibes
-        GH-->>B: Возвращает github_repo_url clone_url и repo details
+        GH->>GH: Инициализация репозитория с initial commit и README в организации vybcel
+        GH-->>WS: Возвращает github_repo_url clone_url и repo details
         
-        B->>DB: Обновляет проект с данными GitHub репозитория статус pending
-        Note right of DB: Сохраняет github_repo_url github_repo_name owner + deploy_status pending
+        WS->>DB: ProjectQueries.updateGitHubInfo обновляет проект с данными GitHub
+        Note right of DB: Сохраняет github_repo_url github_repo_name owner vybcel
         
-        B->>B: Запускает uploadTemplateFilesInBackground асинхронно
-        Note right of B: Promise в фоне БЕЗ await не блокирует ответ API
+        WS-->>B: Возвращает успешный ответ с данными репозитория
+        Note right of B: Получает github_repo_url github_repo_name для дальнейшего использования
+        
+        B->>DB: ProjectQueries.updateProject устанавливает статус pending
+        Note right of DB: deploy_status = pending пока проект инициализируется
+        
+        B->>WS: POST /api/projects/initialize вызывает инициализацию шаблона
+        Note right of B: Переносим заливку шаблона в Railway (безопасно для serverless)
+        Note right of B: WebSocket сервер запускает initializeProjectInBackground в фоне
+        
+        WS-->>B: Возвращает немедленный ответ о начале инициализации
+        Note right of WS: Railway не засыпает - фоновая задача гарантированно выполнится
         
         B-->>U: Возвращает ответ мгновенно статус pending downloadUrl
         Note right of U: Получает проект со статусом pending + ссылку скачивания (заблокированную)
+        Note right of U: Все тяжелые операции переданы в Railway WebSocket сервер
         
-        par Фоновый процесс uploadTemplateFilesInBackground
-            B->>B: generateTemplateFiles создает файлы шаблона проекта
-            Note right of B: Берет шаблон из папки templates/vite-react и настраивает его
-            B->>B: Заменяет __PROJECT_ID__ на реальный ID в shipvibes-dev.js
+        par Фоновый процесс initializeProjectInBackground в Railway
+            WS->>WS: generateTemplateFiles создает файлы шаблона проекта
+            Note right of WS: Берет шаблон из папки templates/vite-react и настраивает его
+            WS->>WS: Заменяет __PROJECT_ID__ на реальный ID в vybcel.config.json
             
-            B->>B: createMultipleFiles через Git Tree API избегает конфликтов
-            Note right of B: Создает все файлы одним коммитом через Git Tree API
+            WS->>WS: import('./services/github.js') динамический импорт GitHub сервиса
+            Note right of WS: Railway окружение поддерживает полный Node.js функционал
             
-            B->>GH: GitHub API GET /repos/shipvibes/repo/git/refs/heads/main получает parent commit
+            WS->>GH: GitHub API GET /repos/vybcel/repo/git/refs/heads/main получает parent commit
             Note right of GH: Получает SHA последнего коммита для создания нового коммита
-            GH-->>B: Возвращает parent commit SHA для tree API
+            GH-->>WS: Возвращает parent commit SHA для tree API
             
             loop Обработка файлов чанками по 5 штук
-                B->>GH: GitHub API POST /repos/shipvibes/repo/git/blobs создает 5 blobs
+                WS->>GH: GitHub API POST /repos/vybcel/repo/git/blobs создает 5 blobs
                 Note right of GH: Создает blob объекты для чанка файлов с задержкой 100ms
-                GH-->>B: Возвращает SHA для каждого blob объекта в чанке
+                GH-->>WS: Возвращает SHA для каждого blob объекта в чанке
             end
             
-            B->>GH: GitHub API POST /repos/shipvibes/repo/git/trees создает tree со всеми файлами
+            WS->>GH: GitHub API POST /repos/vybcel/repo/git/trees создает tree со всеми файлами
             Note right of GH: Создает tree объект содержащий все файлы проекта
-            GH-->>B: Возвращает tree SHA
+            GH-->>WS: Возвращает tree SHA
             
-            B->>GH: GitHub API POST /repos/shipvibes/repo/git/commits создает единый коммит
+            WS->>GH: GitHub API POST /repos/vybcel/repo/git/commits создает единый коммит
             Note right of GH: Создает один коммит со всеми файлами шаблона + parent commit SHA
-            GH-->>B: Возвращает commit SHA
+            GH-->>WS: Возвращает commit SHA
             
-            B->>GH: GitHub API PATCH /repos/shipvibes/repo/git/refs/heads/main обновляет main
+            WS->>GH: GitHub API PATCH /repos/vybcel/repo/git/refs/heads/main обновляет main
             Note right of GH: Обновляет main ветку на новый коммит
-            GH-->>B: Подтверждение обновления main ветки
+            GH-->>WS: Подтверждение обновления main ветки
             
-            B->>DB: CommitHistoryQueries.createCommitHistory создает запись
+            WS->>DB: CommitHistoryQueries.createCommitHistory создает запись
             Note right of DB: Сохраняет commit SHA количество файлов в commit_history
             
-            B->>B: В development автоматически запускает ngrok.startTunnel()
-            Note right of B: Создает публичный URL для webhooks localhost:8080 → https://xxx.ngrok.io
-            B->>B: Устанавливает process.env.WEBSOCKET_SERVER_URL = ngrok_url
-            Note right of B: Обновляет переменную окружения для использования в webhook
-            
-            B->>DB: Обновляет проект статус ready готов к скачиванию
+            WS->>DB: ProjectQueries.updateProject обновляет статус ready
             Note right of DB: Статус меняется с pending на ready (проект готов)
             Note right of DB: Netlify сайт будет создан при первом Save All Changes
             
-            B->>WS: POST /api/notify-status-change отправляет WebSocket уведомление
-            Note right of B: Уведомляет WebSocket сервер о завершении инициализации
+            WS->>WS: В development автоматически запускает ngrok.startTunnel()
+            Note right of WS: Создает публичный URL для webhooks localhost:8080 → https://xxx.ngrok.io
+            Note right of WS: В production использует WEBSOCKET_SERVER_URL напрямую
             
-            WS->>B: io.to projectId emit deploy_status_update уведомляет браузер
-            Note right of WS: Отправляет WebSocket событие всем клиентам проекта
+            WS->>WS: io.to(`project_${projectId}`).emit('deploy_status_update') отправляет событие
+            Note right of WS: Прямое WebSocket уведомление без HTTP вызовов
+            Note right of WS: Railway окружение поддерживает прямую отправку событий
+            
+            WS->>B: WebSocket событие deploy_status_update уведомляет браузер
             Note right of B: UI мгновенно обновляется - кнопка скачивания разблокируется
+            Note right of B: Пользователь видит что проект готов к скачиванию
         end
         
         alt Пользователь пытается скачать проект ДО завершения инициализации
@@ -126,7 +141,7 @@ sequenceDiagram
             B->>GH: downloadProjectFromGitHub получает свежий ZIP из репозитория
             GH-->>B: Отправляет содержимое main ветки как ZIP архив
             B-->>U: Браузер скачивает project.zip на компьютер пользователя
-            Note right of U: Проект содержит все файлы шаблона + shipvibes-dev.js с PROJECT_ID
+            Note right of U: Проект содержит все файлы шаблона + vybcel агент с PROJECT_ID
         end
     end
 
@@ -134,7 +149,7 @@ sequenceDiagram
     rect rgb(250, 255, 250)
         Note over U,W: 2️⃣ ЛОКАЛЬНАЯ НАСТРОЙКА - распаковка проекта и запуск синхронизации
         U->>U: Распаковывает ZIP архив в папку проекта на компьютере
-        Note right of U: Получает готовую папку с package.json shipvibes-dev.js и git remote
+        Note right of U: Получает готовую папку с package.json vybcel агент и git remote
         
         U->>V: Открывает папку проекта в редакторе VSCode или Cursor
         Note right of V: Редактор показывает структуру проекта и готов к редактированию
@@ -148,7 +163,7 @@ sequenceDiagram
         Note right of U: Git автоматически инициализируется при первом запуске sync
         Note right of U: Remote origin настраивается на GitHub репозиторий проекта
         
-        W->>W: Скрипт shipvibes-dev.js запускается командой pnpm sync
+        W->>W: Vybcel агент запускается командой pnpm sync
         Note right of W: Локальный агент начинает работу синхронизации с облаком
         
         W->>W: checkGitRepository проверяет наличие git репозитория
@@ -304,7 +319,7 @@ sequenceDiagram
             
             WS->>DB: ProjectQueries.getProjectById получает данные GitHub репозитория
             Note right of DB: Возвращает github_repo_url owner repo_name для коммита
-            DB-->>WS: Объект проекта с github_repo_url owner shipvibes repo_name
+            DB-->>WS: Объект проекта с github_repo_url owner vybcel repo_name
             
             alt Первый коммит пользователя (нет netlify_site_id)
                 WS->>N: Netlify API POST /sites создает сайт с GitHub интеграцией
@@ -320,15 +335,15 @@ sequenceDiagram
             end
             
             loop Для каждого измененного файла
-                WS->>GH: GitHub API PUT /repos/shipvibes/repo/contents/filePath
+                WS->>GH: GitHub API PUT /repos/vybcel/repo/contents/filePath
                 Note right of GH: Отправляет ПОЛНОЕ СОДЕРЖИМОЕ файла через GitHub App токен
                 Note right of GH: Authorization Bearer {installation_token}
                 GH-->>WS: Возвращает новый sha файла в репозитории
             end
             
-            WS->>GH: GitHub API POST /repos/shipvibes/repo/git/refs/heads/main обновляет main
+            WS->>GH: GitHub API POST /repos/vybcel/repo/git/refs/heads/main обновляет main
             Note right of GH: Создается один коммит "Save project changes" со всеми файлами
-            GH->>GH: Коммит появляется в main ветке репозитория организации shipvibes
+            GH->>GH: Коммит появляется в main ветке репозитория организации vybcel
             GH-->>WS: Возвращает sha коммита commit_url и tree_sha
             
             WS->>DB: FileHistoryQueries.createCommitRecord создает запись о коммите
@@ -353,7 +368,7 @@ sequenceDiagram
                 Note right of W: git fetch + git reset --hard FETCH_HEAD (избегает конфликтов merge)
                 W-->>WS: emit pull_completed подтверждение синхронизации
             else Альтернатива - перезапись файлов через WebSocket
-                WS->>GH: GitHub API GET /repos/shipvibes/repo/contents для измененных файлов
+                WS->>GH: GitHub API GET /repos/vybcel/repo/contents для измененных файлов
                 GH-->>WS: Возвращает актуальное содержимое файлов из GitHub
                 
                 WS->>W: emit update_local_files отправляет новое содержимое файлов
@@ -452,7 +467,7 @@ sequenceDiagram
         Note right of B: Открывает Netlify URL в новой вкладке браузера
         
         U->>B: Клик по кнопке "View on GitHub"
-        Note right of B: Открывает GitHub репозиторий shipvibes-project-{id}
+        Note right of B: Открывает GitHub репозиторий vybcel-project-{id}
         B-->>U: Пользователь видит приватный репозиторий но НЕ может в него пушить
         Note right of U: Полная прозрачность изменений через GitHub интерфейс
     end
@@ -490,7 +505,7 @@ sequenceDiagram
             Note right of APP: Генерирует JWT и получает installation token на 60 минут
             APP-->>B: Возвращает installation_token для авторизации удаления
             
-            B->>GH: DELETE /repos/shipvibes/{github_repo_name} удаляет репозиторий
+            B->>GH: DELETE /repos/vybcel/{github_repo_name} удаляет репозиторий
             Note right of GH: Authorization Bearer {installation_token}
             Note right of GH: Полностью удаляет приватный репозиторий из организации
             GH->>GH: Удаляет все файлы историю коммитов issues PR webhooks
@@ -601,13 +616,16 @@ sequenceDiagram
         Note over U,B: КЛЮЧЕВЫЕ ОСОБЕННОСТИ архитектуры
         Note right of U: Пользователь НИКОГДА не логинится в GitHub
         Note right of U: Все операции с GitHub выполняет платформа через GitHub App
-        Note right of U: Приватные репозитории в организации shipvibes
+        Note right of U: Приватные репозитории в организации vybcel
         Note right of U: Netlify автоматически настроен с deploy keys для чтения
         Note right of U: Коммит в main = сохранение проекта + автодеплой
         Note right of U: Staging area позволяет накапливать изменения и откатывать их
         Note right of U: Локальный git reset работает БЕЗ авторизации для отката
         Note right of U: Умная блокировка скачивания до завершения инициализации проекта
         Note right of U: Real-time обновление UI при изменении статуса инициализации
+        Note right of U: 🚀 SERVERLESS-SAFE: Все тяжелые операции перенесены в Railway
+        Note right of U: Next.js выполняет только быстрые HTTP вызовы к WebSocket серверу
+        Note right of U: Railway окружение не засыпает - фоновые задачи гарантированно завершаются
         
         Note over U,B: НАВИГАЦИЯ И UX
         Note right of U: Упрощенная навигация - только 2-3 вкладки Overview Onboarding Settings
